# strata

./: .env.example  .gitignore  .mailmap  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  decisions.md  package.json  pnpm-lock.yaml  strata-design.md  tsconfig.base.json
crates/strata-kernel/: Cargo.toml
crates/strata-kernel/src/: graph.rs  kernel.rs  lib.rs  model.rs  storage.rs  sync_digest.rs
crates/strata-kernel/src/bridge/: executor.rs  mod.rs  observer.rs  persistent.rs  process.rs  protocol.rs  provider.rs  router.rs  scaffold.rs  sync_state.rs
crates/strata-kernel/src/coordination/: analyzer.rs  authority.rs  coordinator.rs  durable.rs  mod.rs  model.rs  planner.rs  publication.rs  resources.rs  scheduler.rs
crates/strata-kernel/tests/: api_sealing.rs  bridge_protocol.rs  concurrent_readers.rs  coordination_acceptance.rs  coordination_authority.rs  coordination_durable.rs  coordination_leases.rs  coordination_lifecycle.rs  coordination_model.rs  coordination_optimistic.rs  coordination_planner.rs  coordination_publication.rs  coordination_recovery.rs  coordination_recovery_default.rs  coordination_resources.rs  coordination_scheduler.rs  coordination_scope.rs  crash_recovery.rs  examples_medium_fixture.rs  fencing.rs  full_key_free_acceptance.rs  graph_generation.rs  local_service.rs  local_service_hardening.rs  local_service_metrics.rs  local_service_recovery.rs  local_service_sealing.rs  model_roundtrip.rs  node_bridge.rs  node_bridge_failures.rs  recovery.rs  storage_atomic.rs  sync_published_log.rs
crates/strata-kernel/tests/fixtures/: fake-worker.js  (+4 more)
(+168 files in other folders)
